Closed Bug 1536137 Opened 5 years ago Closed 5 years ago

RDD processes (and anything else that does memory reporting) will call getrusage

Categories

(Core :: Security: Process Sandboxing, defect, P1)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: jld, Assigned: gcp)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Found while trying to see if bug 1536127 would reproduce. STR: flip the AV1/RDD prefs, load an AV1 video, and then do a memory report. getrusage is called from here and it's not allowed (yet).

This (and bug 1536127) were missed because GMP doesn't do memory reporting (so the common policy doesn't cover it), and while we have tests for memory reporting and AV1 separately, we apparently don't have even a smoke test for memory reporting combined with AV1.

Assignee: jld → gpascutto

Depends on D24190

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
No longer blocks: 1506291
Regressed by: 1506291

Hello,

I'm trying to reproduce this issue can you please tell me what are the AV1/RDD prefs and what value should they have? Also am I mistaken in thinking that the memory report refers to the one done using the web developer tools (memory tab)?

Flags: needinfo?(jld)

(In reply to Daniel Cicas [:dcicas], Release QA from comment #4)

I'm trying to reproduce this issue can you please tell me what are the AV1/RDD prefs and what value should they have? Also am I mistaken in thinking that the memory report refers to the one done using the web developer tools (memory tab)?

The prefs are media.rdd-process.enabled and media.av1.enabled, but I think they're on by default now. The memory report I was doing was through about:memory (the “Measure” button).

Flags: needinfo?(jld)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: