Bug 1536137 - Add getrusage to RDD policy. r=jld

Depends on D24190

Differential Revision: https://phabricator.services.mozilla.com/D25621