security/sandbox/linux/SandboxFilter.cpp
@@ -1420,6 +1420,9 @@ class RDDSandboxPolicy final : public SandboxPolicyCommon {
 
   ResultExpr EvaluateSyscall(int sysno) const override {
     switch (sysno) {
+      case __NR_getrusage:
+        return Allow();
+
       CASES_FOR_fcntl:
         return Trap(FcntlTrap, nullptr);
 
